--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -656,9 +656,68 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-3 info_col">
+          <div class="info_detail">
+            <h4>
+              Info
+            </h4>
+            <p style="line-height: 30px;">
+                We provide expert cleaning services to businesses and homes. With over 10 years of experience we'll ensure that you're always getting the best results from an award-winning firm focused on quality.
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-2 mx-auto info_col">
+          <div class="info_link_box">
+            <h4>
+              Quick Links
+            </h4>
+            <div class="info_links">
+              <a class="active" href="{% url 'home' %}">
+                Home
+              </a>
+              <a class="" href="{% url 'about' %}">
+                Why Us
+              </a>
+              <a class="" href="{% url 'services' %}">
+                Services
+              </a>
+              
+              <a class="" href="{% url 'contact' %}">
+                Contact
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 info_col ">
+          <h4>
+            Our Services
+          </h4>
+          <div class="info_links">
+            <a class="active" href="">
+              Carpet Cleaning
+            </a>
+            <a class="" href="">
+              Office Cleaning
+            </a>
+            <a class="" href="">
+              Sofa Set Cleaning
+            </a>
+            <a class="" href="">
+              Post Construction Cleaning
+            </a>
+            <a class="" href="">
+              Pool Cleaning
+            </a>
+            <br><br>
+            Customer Care: 0758321456 |
+            <br>
+            customercare@crystalcleaners.co.ke
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-3 info_col">
           <div class="info_contact">
             <h4>
-              Address
+              Contact US
             </h4>
             <div class="contact_link_box">
               <a href="#">
@@ -670,7 +729,7 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call 0712345678 | 0790300000
+                  Cell 0712345678 | 0790300000 | 0798765432
                 </span>
               </a>
               <a href="">
@@ -695,49 +754,6 @@
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-3 info_col">
-          <div class="info_detail">
-            <h4>
-              Info
-            </h4>
-            <p style="line-height: 30px;">
-                We provide expert cleaning services to businesses and homes. With over 10 years of experience we'll ensure that you're always getting the best results from an award-winning firm focused on quality.
-            </p>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-2 mx-auto info_col">
-          <div class="info_link_box">
-            <h4>
-              Links
-            </h4>
-            <div class="info_links">
-              <a class="active" href="{% url 'home' %}">
-                Home
-              </a>
-              <a class="" href="{% url 'about' %}">
-                Why Us
-              </a>
-              <a class="" href="{% url 'services' %}">
-                Services
-              </a>
-              
-              <a class="" href="{% url 'contact' %}">
-                Contact
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 info_col ">
-          <h4>
-            Subscribe
-          </h4>
-          <form action="#">
-            <input type="text" placeholder="Enter email" />
-            <button type="submit">
-              Subscribe
-            </button>
-          </form>
         </div>
       </div>
     </div>
