--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,7 +43,7 @@
 
       <div class="hero_bg_box">
         <div class="bg_img_box">
-          <img src="{% static 'images/guess.jpg' %}" alt="Cleaning">
+          <img src="{% static 'images/front.jpg' %}" alt="Cleaning">
         </div>
       </div>
   
