--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -76,7 +76,7 @@
                   <a class="nav-link" href="#contact">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link btn btn-success" href="#">get Quote</a>
+                  <a class="nav-link btn btn-success" href="{% url 'quote' %}">get Quote</a>
                 </li>
               </ul>
             </div>
