quote page partial working

--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -17,7 +17,7 @@
                         Looking for Excellent <br> Cleaning Services?<br>
                     </h1>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="{% url 'quote' %}" class="btn1">
                         GET A QUOTE
                       </a>
                     </div>
@@ -40,7 +40,7 @@
                         Looking for Excellent <br> Cleaning Services?<br>
                     </h1>
                     <div class="btn-box">
-                        <a href="" class="btn1">
+                        <a href="{% url 'quote' %}" class="btn1">
                           GET A QUOTE
                         </a>
                     </div>
@@ -63,7 +63,7 @@
                         Looking for Excellent <br> Cleaning Services?<br>
                     </h1>
                     <div class="btn-box">
-                        <a href="" class="btn1">
+                        <a href="{% url 'quote' %}" class="btn1">
                           GET A QUOTE
                         </a>
                     </div>
