--- a/app/templates/quote/quote_form.html
+++ b/app/templates/quote/quote_form.html
@@ -1,64 +1,72 @@
+
+
 {% extends 'base.html' %}
 {% load static %}
 
 {% block content %}
     
 
-    <!doctype html>
+    <!DOCTYPE html>
     <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <title>Request a Quote</title>
-    </head>
-    <body>
-        <h1 class="display-2">Request a Quote</h1>
-        <form action="" method="post">
-            {% csrf_token %}
-            <div>
-                <label for="full_name">Full Name:</label>
-                <input type="text" id="full_name" name="full_name" required>
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Quote Form</title>
+            <script src="{% static 'css/quote.css' %}"></script>
+            <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+        </head>
+        <body>
+            <div class="container-fluid">
+                <h1>Get a Quote</h1>
+                <form method="post">
+                    {% csrf_token %}
+                    <div class="col-md-12">
+                        <label for="{{ form.full_name.id_for_label }}" class="form-label visually-hidden">Full Name</label>
+                        {{ form.full_name }}
+                        {% for error in form.full_name.errors %}
+                            <div class="invalid-feedback d-block">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-md-12">
+                        <label for="{{ form.email.id_for_label }}" class="form-label visually-hidden">Email</label>
+                        {{ form.email }}
+                        {% for error in form.email.errors %}
+                            <div class="invalid-feedback d-block">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-md-12">
+                        <label for="{{ form.phone_number.id_for_label }}" class="form-label visually-hidden">Phone Number</label>
+                        {{ form.phone_number }}
+                        {% for error in form.phone_number.errors %}
+                            <div class="invalid-feedback d-block">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-md-12">
+                        <label for="{{ form.location.id_for_label }}" class="form-label visually-hidden">Location</label>
+                        {{ form.location }}
+                        {% for error in form.location.errors %}
+                            <div class="invalid-feedback d-block">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-12">
+                        <label for="{{ form.service_description.id_for_label }}" class="form-label visually-hidden">Service Description</label>
+                        {{ form.service_description }}
+                        {% for error in form.service_description.errors %}
+                            <div class="invalid-feedback d-block">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-primary mb-3">Submit</button>
+                    </div>
+                </form>
             </div>
-            <div>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div>
-                <label for="phone_number">Phone Number:</label>
-                <input type="tel" id="phone_number" name="phone_number" pattern="[0-9]{10}" required>
-                <small>Format: 0701234567</small>
-            </div>
-            <div>
-                <label for="location">Location:</label>
-                <select id="location" name="location" required>
-                    <option value="" selected disabled>Select Location</option>
-                    <option value="Nairobi">Nairobi</option>
-                    <option value="Kiambu">Kiambu</option>
-                    <option value="Machakos">Machakos</option>
-                    <option value="Kajiado">Kajiado</option>
-                </select>
-            </div>
-            <div>
-                <label for="service_description">Service Description:</label><br>
-                <textarea id="service_description" name="service_description" rows="4" maxlength="500" required></textarea>
-            </div>
-            <div>
-                <button class="btn btn-primary" type="submit">Submit</button>
-            </div>
-        </form>
-
-        <!-- Optional JavaScript; choose one of the two! -->
-
-        <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <!-- Option 2: Separate Popper and Bootstrap JS -->
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-        
-    </body>
+            <script src="{% static 'js/quote.js' %}"></script>
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+        </body>
     </html>
 
+
 {% endblock %}
+
