add Celery and RabbitMQ

--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -24,7 +24,7 @@
                       <span>0712345678 | 0790300000</span>
                     </button>
                     <div class="btn-box">
-                      <a href="#" class="btn1">
+                      <a href="{% url 'quote:quote' %}" class="btn1">
                         GET A QUOTE
                       </a>
                     </div>
@@ -53,7 +53,7 @@
                       <span>0712345678 | 0790300000</span>
                     </button>
                     <div class="btn-box">
-                        <a href="#" class="btn1">
+                        <a href="{% url 'quote:quote' %}" class="btn1">
                           GET A QUOTE
                         </a>
                     </div>
@@ -84,7 +84,7 @@
                     
           
                     <div class="btn-box">
-                        <a href="#" class="btn1">
+                        <a href="{% url 'quote:quote' %}" class="btn1">
                           GET A QUOTE
                         </a>
                     </div>
@@ -818,7 +818,7 @@
           </h4>
           <div class="info_links">
             <a class="active" href="#services">
-              Monday - Friday 8:00am - 7:30pm
+              Monday-Friday 8:00am-7:30pm
             </a>
             <a class="" href="#services">
               Saturday: 9:00am - 5:00pm
@@ -830,7 +830,7 @@
               Holidays: 0ff Day
             </a>
             <a class="" href="#services">
-              For Emergency cases: 0725879789
+              Emergency cases: 0725879789
             </a>
             <br><br>
             Customer Care: 0758321456 |
