--- a/app/templates/quote/success.html
+++ b/app/templates/quote/success.html
@@ -18,7 +18,7 @@
                     Your quote request has been successfully submitted!
                     Thank you for using our quote service. We will contact you shortly.
                 </div>
-                <a href="{% url 'quote' %}" class="btn btn-primary">Submit Another Quote</a>
+                <a href="{% url 'quote:quote' %}" class="btn btn-primary">Submit Another Quote</a>
             </div>
         </body>
     </html>
