--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,18 +1,17 @@
 {% load static %}
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Site keywords here">
+    <meta name="keywords" content="Site keywords here">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <!-- Site Metas -->
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
     <link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="">
-    
 
     {% if title %}
         <title>Crystal Clear Cleaners | {{ title }}</title>
@@ -29,12 +28,11 @@
         font-size: 25px;
         margin-right: 10px;
       }
-    
+
       .btn.btn-success:hover {
         background-color: blue !important; /* Use !important to override Bootstrap styles */
       }
-    
-      
+
       .btn.btn-success:hover span {
         color: white !important; 
       }
@@ -42,13 +40,13 @@
       .info_social a:not(:last-child) {
         margin-right: 10px; /* Adding space between the social icons except for the last one */
       }
-    
+
       .info_social a i {
           color: #ff5733; /* Changing the color of the social icons */
           padding-right: 15px;
       }
     </style>
-    
+
     <!-- fonts style -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
@@ -62,93 +60,79 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet" />
     <!-- responsive style -->
     <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
-        
-  </head>
-  <body>
+</head>
+<body>
     <div class="hero_area">
-
-      <div class="hero_bg_box">
-        <div class="bg_img_box">
-          <img src="{% static 'images/front.jpg' %}" alt="Cleaning">
-        </div>
-      </div>
-  
-      <!-- header section strats -->
-      <header class="header_section">
-        <div class="container-fluid">
-          <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand" href="{% url 'home' %}">
-              <span>
-                Crystal Clear Cleaners
-              </span>
-            </a>
-  
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class=""> </span>
-            </button>
-  
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav  ">
-                <li class="nav-item active">
-                  <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#about">Why US</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#services">Services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#contact">Contact Us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link btn btn-success" href="{% url 'quote' %}">get Quote</a>
-                </li>
-              </ul>
+        <div class="hero_bg_box">
+            <div class="bg_img_box">
+                <img src="{% static 'images/front.jpg' %}" alt="Cleaning">
             </div>
-          </nav>
         </div>
-      </header>
-    
-      {% block content %}
-            
-            
-      {% endblock %}
+        <!-- header section strats -->
+        <header class="header_section">
+            <div class="container-fluid">
+                <nav class="navbar navbar-expand-lg custom_nav-container ">
+                    <a class="navbar-brand" href="{% url 'home' %}">
+                        <span>
+                            Crystal Clear Cleaners
+                        </span>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class=""> </span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#about">Why US</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#services">Services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact">Contact Us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link btn btn-success" href="{% url 'quote:quote' %}">get Quote</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        {% block content %}
+        {% endblock %}
     </div>
     <script>
-      document.addEventListener("DOMContentLoaded", function() {
-        function scrollToSection(id) {
-          const section = document.getElementById(id);
-          if (section) {
-            section.scrollIntoView({ behavior: "smooth" });
-          }
-        }
-    
-        const navbarLinks = document.querySelectorAll("nav a");
-        navbarLinks.forEach(link => {
-          link.addEventListener("click", function(event) {
-            event.preventDefault();
-            const targetId = this.getAttribute("href").substring(1);
-            scrollToSection(targetId);
-          });
+        document.addEventListener("DOMContentLoaded", function() {
+            function scrollToSection(id) {
+                const section = document.getElementById(id);
+                if (section) {
+                    section.scrollIntoView({ behavior: "smooth" });
+                }
+            }
+
+            const navbarLinks = document.querySelectorAll("nav a");
+            navbarLinks.forEach(link => {
+                link.addEventListener("click", function(event) {
+                    event.preventDefault();
+                    const targetId = this.getAttribute("href").substring(1);
+                    scrollToSection(targetId);
+                });
+            });
         });
-      });
     </script>
-    
-    
-    <!-- jQery -->
+
+    <!-- jQuery -->
     <script type="text/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
     <!-- popper js -->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <!-- bootstrap js -->
     <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
     <!-- owl slider -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-    </script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <!-- custom js -->
     <script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
     <!-- Google Map -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
-  </body>
+</body>
 </html>
