--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -24,9 +24,7 @@
                       <span>0712345678 | 0790300000</span>
                     </button>
                     <div class="btn-box">
-                      <a href="{% url 'quote:quote' %}" class="btn1">
-                        GET A QUOTE
-                      </a>
+                      <a href="#" class="btn1" onclick="openQuoteSidebar()">GET A QUOTE</a>
                     </div>
                   </div>
                 </div>
@@ -53,9 +51,7 @@
                       <span>0712345678 | 0790300000</span>
                     </button>
                     <div class="btn-box">
-                        <a href="{% url 'quote:quote' %}" class="btn1">
-                          GET A QUOTE
-                        </a>
+                      <a href="#" class="btn1" onclick="openQuoteSidebar()">GET A QUOTE</a>
                     </div>
                   </div>
                 </div>
@@ -84,9 +80,7 @@
                     
           
                     <div class="btn-box">
-                        <a href="{% url 'quote:quote' %}" class="btn1">
-                          GET A QUOTE
-                        </a>
+                      <a href="#" class="btn1" onclick="openQuoteSidebar()">GET A QUOTE</a>
                     </div>
                   </div>
                 </div>
@@ -109,6 +103,13 @@
     </section>
     <!-- end slider section -->
   </div>
+
+  <button onclick="topFunction()" id="backbtn" title="Go to top">
+    <i class="fa fa-arrow-circle-o-up fa-2x"></i>
+  </button>
+  
+  
+
 
 
   <!-- service section -->
